Setting up a release archive

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,3 +15,24 @@ jobs:
       - run: npm run deploy --prefix ./assets
       - run: mix phx.digest
       - run: MIX_ENV=prod mix release
+      - run: tar -zcvf ./release.tar.gz -C ./_build/prod/rel/deployment_example .
+        
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          with:
+            tag_name: test-${{ github.sha }}
+            release_name: Release ${{ github.ref }}
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+            asset_path: ./release.tar.gz
+            asset_name: release.tar.gz
+            asset_content_type: application/gzip
